bug 787557 - inactive databases dont generate a folderLoaded event, r=neil